# kubecuro

./: .gitignore  build.sh  pyproject.toml  requirements.txt
catalog/: k8s_v1_distilled.json
src/kubecuro/: cli.py
src/kubecuro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kubecuro/cli/: formatter.py  main.py  main_argparse_use_this_current_one_is_working.py
src/kubecuro/core/: engine.py  models.py
src/kubecuro/healing/: context.py  exporter.py  lexer.py  pipeline.py  scanner.py  shadow.py  structurer.py
src/kubecuro/rules/: shield.py
src/kubecuro/validator/: validator.py
tests/: test_chaos.py  test_healer.py  test_recovery.py  test_stability.py  test_suite.py
tests/fixtures/valid_manifests/: service.yaml
